# mikrocontroller_kalkulator

mikrocontroller_anwendung/microcontroller_side_v1/: microcontroller_side_v1.ino
pc_anwendung/Kalkulator/: CMakeLists.txt
pc_anwendung/Kalkulator/src/: frame.cpp  frame.h  main.cpp
pc_anwendung/Tests/: BUILD  kalkulator_test.cc
pc_anwendung/build-cocoa-debug/: frame.cpp  main.cpp  main.h
